--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Dillon's Portfolio</title>
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="shortcut icon" href="assets/fav-icon.png" type="image/x-icon">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Home - Dillon's Portfolio</title>
+<link rel="stylesheet" href="styles/style.css">
+<link rel="shortcut icon" href="assets/fav-icon.png" type="image/x-icon">
 
 </head>
 <body>
-  <!-- header section -->
+<!-- header section -->
 <header class="header">
   <div class="container">
     <a href="index.html"><img src="assets/fav-icon.png" alt="A Logo of the letter D being lifted from the ground"></a><!--Resuse favicon as logo-->
   </div>
 </header>
-  
-  <!-- Navigation section -->
+
+<!-- Navigation section -->
 <nav class="nav-bar">
   <div class="container">
     <ul class="nav-options">
       <li><a href="index.html">Home</a></li>
       <li><a href="pages/about.html">About</a></li>
       <li>
-        <a href="pages/blog.html">Blogs</a> <!--Adds a sublist under the Blogs as a dropdown -->
+        <a href="pages/blog.html">Blogs</a> 
+        <!--Adds a sublist under the Blogs as a dropdown -->
         <ul class="blog-dropdown">
           <li><a href="pages/blog.html#blog1">Blog 1</a></li>
           <li><a href="pages/blog.html#blog2">Blog 2</a></li>
@@ -38,29 +39,31 @@
   </div>
 </nav>
 
-  <!-- Main Section -->
-  <main>
+<!-- Main Section -->
+<main>
   <section class="jumbotron">
     <h1>Dillon's Portfolio</h1>
     <div class="container">
-    <div class="left-split"> <!--Creates 2 separate 'containers' that allow a left and right split when using flex-->
-      <div class="main-image">
-        <div class="image-container"></div> <!--Decided to use a background image and format the div-->
+      <!--Creates 2 separate 'containers' that allow a left and right split when using flex-->
+      <div class="left-split"> 
+        <div class="main-image">
+          <div class="image-container"></div> <!--Decided to use a background image and format the div-->
+        </div>
+        <h2 class="welcome">Welcome!</h2>
       </div>
-      <h2 class="welcome">Welcome!</h2>
-  </div>
-    <div class="main-text">
-      <div class="main-text-header">
-        <h2>A brief introduction</h2>
-      </div>
-      <div class="main-text-body"> 
-        <p>I am a Product Manager of DocuSign at Bendigo Adelaide Bank, where I am responsible for the overall use of the platform, escalated enquiries and working with multiple departments on how they may implement DocuSign into their operations.</p>
-        <p>I am also a recent full stack Web Developer with experience in HTML and CSS after studying with Coder Academy.</p>
-        <p>This is my first significant step into the Information Technology sector after a lifetime of high interest.</p>
+      <!-- Wraps text into a div so formatting can occur to give it a background and border -->
+      <div class="main-text">
+        <div class="main-text-header">
+          <h2>A brief introduction</h2>
+        </div>
+        <div class="main-text-body"> 
+          <p>I am a Product Manager of DocuSign at Bendigo Adelaide Bank, where I am responsible for the overall use of the platform, escalated enquiries and working with multiple departments on how they may implement DocuSign into their operations.</p>
+          <p>I am also a recent full stack Web Developer with experience in HTML and CSS after studying with Coder Academy.</p>
+          <p>This is my first significant step into the Information Technology sector after a lifetime of high interest.</p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 </main>
 
 <!-- Footer section -->
